--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,20 @@
-.logo1 {
-	height: 45px;
-	margin-right: 100px;
+.charcho {
+	width: 604px;
+	height: 152px;
 
 	
 }
 
-.navig {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-top: 20px;
-
-
-}
-
-.nav {
-	color: #3D58A6;
-	font-size: 18px;
-	background-color:#FF6EFF;
-	margin-left: 50px;
-}
-
-.logo2 {
-	height: 30px;
-	margin-right: 50px;
-
-}
-
-.box2 {
-	margin-left: 150px;
-}
-
-.container {
-	margin-top: 20px;
-	background-color: #BDCCD4;
-		padding-top: 30px;
-
-}
-
-.pictures {
-	height: 190px;
-	margin-bottom: -3px;
-	
+.logo {
+	height: 115px;
+	display: inline-block;
 }
 
 .text {
-	color: black;
-	background-color: #fff;
-	font-size: 19px;
-	padding:10px;
+	display: inline-block;
 
 }
 
-.bb {
-	margin-left:50px;
-}
-.insidebox1{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-}
-
-.insidebox2{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-top: 30px;
-}
-.loadmore{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: #fff;
-	font-size: 18px;
-	margin-top: 20px;
-	background-color: #83939B;
-	/*width: 135px;
-	height: 60px;*/
+.text1 {
+	margin: 10px;
 }
